realize multiple file upload, add cover setter

--- a/Client.Web/Scripts/app/component/tab-section/tab-section.scss
+++ b/Client.Web/Scripts/app/component/tab-section/tab-section.scss
@@ -2,6 +2,7 @@
   .download-list {
     padding: 20px 0;
     .download-list-image-wrapper {
+      position: relative;
       display: inline-block;
       vertical-align: top;
       margin-bottom: 5px;
@@ -10,10 +11,28 @@
       &:nth-child(odd) {
         margin-right: 5px;
       }
+      &:hover {
+        cursor: pointer;
+      }
       img {
         width: 100%;
         height: 100%;
         border-radius: 5px;
+      }
+      .photo-label-cover {
+        display: none;
+        width: 80px;
+        height: 20px;
+        border-radius: 3px;
+        position: absolute;
+        top: 5px;
+        left: 5px;
+        font-size: 11px;
+        font-weight: 900;
+        letter-spacing: 0.5px;
+        &.active {
+          display: block;
+        }
       }
     }
     .download-list-uploader {
