--- a/Client.Web/Scripts/app/component/tab-section/tab-section.scss
+++ b/Client.Web/Scripts/app/component/tab-section/tab-section.scss
@@ -34,6 +34,19 @@
           display: block;
         }
       }
+      .photo-label-remove {
+        position: absolute;
+        top: 7px;
+        right: 7px;
+        opacity: 0.7;
+        width: 14px;
+        height: 14px;
+        background: url('../../../content/images/delete-doc.svg') no-repeat;
+        transition: opacity 0.3s ease;
+        &:hover {
+          opacity: 1;
+        }
+      }
     }
     .download-list-uploader {
       display: inline-block;
