fix docs duplication

--- a/Client.Web/Scripts/app/component/tab-section/templates/docs.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/docs.html
@@ -18,14 +18,13 @@
 
 <div class="download-list file-list">
     <div class="download-list file-list">
-        <div class="download-list-file-wrapper doc" ng-repeat="file in uploadedFiles" ng-click="setCover($index)">
+        <div class="download-list-file-wrapper doc" ng-repeat="file in uploadedFiles track by $index" ng-click="setCover($index)">
             <div class="file-label-name">{{file.formattedName}}</div>
             <div class="label file-label-format {{file.format.toLowerCase()}}">{{file.format}}</div>
             <div class="file-label-remove" ng-click="removeFile($index, true);"></div>
         </div><div class="download-list-uploader"
              ngf-drop="uploadFiles($files, true)"
              ngf-select="uploadFiles($files, true)"
-             ngf-keep="'distinct'"
              ngf-validate="{size: {max: '5MB'}, pattern: '.doc,.pdf,.docx,.pages'}"
              ngf-max-files="20"
              multiple="true">
