--- a/Client.Web/Scripts/app/component/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/router/apartment-detail.html
@@ -5,7 +5,8 @@
 
             </div>
         </div>
-        <div class="apartment-description" style="width: 647px;height: 232px;border-radius: 8px;background: #fff;padding: 20px 30px 30px 30px;">
+        <div class="apartment-description"
+             style="width: 647px;height: 232px;border-radius: 8px;background: #fff;padding: 20px 30px 30px 30px;">
             {{testData.summary.description}}
         </div>
     </div>
@@ -15,7 +16,8 @@
         </div>
         <div class="apartment-map-wrapper" style="height: 400px;border-radius: 8px">
             <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
-                <ya-geo-object ya-source="testData.coords" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
+                <ya-geo-object ya-source="testData.coords"
+                               ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
             </ya-map>
         </div>
     </div>
