--- a/Client.Web/Scripts/app/component/config/router/apartment-detail.html
+++ b/Client.Web/Scripts/app/component/config/router/apartment-detail.html
@@ -54,8 +54,12 @@
         </div>
 
         <div class="apartment-map-wrapper" style="height: 400px;border-radius: 8px;  border-radius: 8px; overflow: hidden;">
-            <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
-                <ya-geo-object ya-source="flat.coords" ya-options="{preset: 'islands#circleIcon',iconColor: '#ff6f37'}"></ya-geo-object>
+            <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-controls>
+                <ya-geo-object ya-source="flat.coords"
+                               ya-options="{iconLayout: 'default#image',
+                                            iconImageHref: '../content/images/map-icon-hover.svg',
+                                            iconImageSize: [45, 45],
+                                            iconImageOffset: [0, 0]};"></ya-geo-object>
             </ya-map>
         </div>
         <style>
