--- a/Client.Web/Scripts/app/component/config/router/search-page.html
+++ b/Client.Web/Scripts/app/component/config/router/search-page.html
@@ -7,7 +7,7 @@
                 <span class="count">{{filteredFlats.length}}</span> предложений
             </div>
             <div class="offers_list clearfix">
-                <a class="flat-card" ui-sref="apartment-detail({id: flat.id})" ng-repeat="flat in filteredFlats track by flat.id" ng-class="{active: flat.highlighted}">
+                <a class="flat-card" ui-sref="apartment-detail({id: flat.id})" ng-repeat="flat in filteredFlats track by flat.id" ng-class="{active: flat.highlighted}" ng-mouseenter="setHighlighting(flat.id, true)" ng-mouseleave="setHighlighting(flat.id, false)">
                     <div class="card_image">
                         <img ng-src="{{flat.images[0].src}}" alt="">
                     </div>
@@ -25,13 +25,19 @@
     </div>
     <div class="right-column column">
         <div class="search-map" style="width: 100%;height: 800px;">
-            <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-after-init="afterMapInit($target)" ya-controls>
+            <ya-map ya-zoom="10" ya-center="[37.62,55.747]" ya-controls>
                 <ya-geo-object ng-repeat="flat in flats track by flat.id" ya-source="flat.coords"
                                ya-show-all="true"
-                               ya-options="{iconLayout: 'default#image', iconImageHref: '../content/images/map-icon-small.svg', iconImageSize:[45, 45], iconImageOffset: [0, 0]}"
-                               ya-event-mouseenter="markerOnMouseEnter(flat.id, $event)"
-                               ya-event-mouseleave="markerOnMouseLeave(flat.id, $event)"
-                >ae</ya-geo-object>
+                               ya-options="{
+                               iconLayout: 'default#image',
+                               iconImageHref: '../content/images/map-icon-small.svg',
+                               iconImageSize: [45, 45],
+                               iconImageOffset: [0, 0]
+                               }"
+                               ya-event-mouseenter="setHighlighting(flat.id, true, $event)"
+                               ya-event-mouseleave="setHighlighting(flat.id, false, $event)"
+                               ya-after-init="addMarkerToMapping(flat.id, $target)">
+                </ya-geo-object>
             </ya-map>
         </div>
 
