--- a/Client.Web/Scripts/app/component/tab-section/templates/details.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/details.html
@@ -1,23 +1,23 @@
-<div class="form">
+<form class="form" novalidate name="detailsForm">
 
     <label class="form-label">
         <div class="label-title">Этаж</div>
         <div class="label-item">
-            <input type="text" ng-model="$parent.model.floor" placeholder="Номер этажа">
+            <input type="text" ng-model="$parent.model.floor" placeholder="Номер этажа" required>
         </div>
     </label>
 
     <label class="form-label">
         <div class="label-title">Площадь, м<sup>2</sup></div>
         <div class="label-item">
-            <input type="text" ng-model="$parent.model.square" placeholder="Общая площадь помещения">
+            <input type="text" ng-model="$parent.model.square" placeholder="Общая площадь помещения" required>
         </div>
     </label>
 
     <label class="form-label">
         <div class="label-title">Комнаты</div>
         <div class="label-item">
-            <input type="text" ng-model="$parent.model.roomsCount" placeholder="Количество комнат">
+            <input type="text" ng-model="$parent.model.roomsCount" placeholder="Количество комнат" required>
         </div>
     </label>
 
@@ -26,7 +26,8 @@
         <div class="label-item">
             <select name="realEstateType"
                     ng-options="option.name for option in data.realEstateTypes track by option.id"
-                    ng-model="$parent.model.realEstateType"></select>
+                    ng-model="$parent.model.realEstateType"
+                    required></select>
         </div>
     </label>
 
@@ -35,23 +36,24 @@
         <div class="label-item">
             <select name="buildCategory"
                     ng-options="option.name for option in data.buildCategories track by option.id"
-                    ng-model="$parent.model.buildCategory"></select>
+                    ng-model="$parent.model.buildCategory"
+                    required></select>
         </div>
     </label>
 
     <label class="form-label">
         <div class="label-title">Стоимость в рублях</div>
         <div class="label-item">
-            <input type="text" ng-model="$parent.model.price" placeholder="Стоимость объекта">
+            <input type="text" ng-model="$parent.model.price" placeholder="Стоимость объекта" required>
         </div>
     </label>
 
     <label class="form-label">
         <div class="label-title">Коментарий</div>
         <div class="label-item">
-            <textarea placeholder="Описание в свободной форме" ng-model="$parent.model.comment"></textarea>
+            <textarea placeholder="Описание в свободной форме" ng-model="$parent.model.comment" required></textarea>
         </div>
     </label>
 
-    <button class="button action action_next green large next">Сохранить и перейти дальше</button>
-</div>
+    <button class="button action action_next green large next" ng-disabled="!detailsForm.$valid">Сохранить и перейти дальше</button>
+</form>
