--- a/Client.Web/Scripts/app/component/tab-section/templates/location.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/location.html
@@ -61,5 +61,5 @@
 
     </label>
 
-    <button class="button action action_next green large next" ng-disabled="!locationForm.$valid">Сохранить и перейти дальше</button>
+    <button class="button action action_next green large next" ng-disabled="!locationForm.$valid" ng-click="$parent.$parent.saveAndGoTo('details', tabCollectionType)">Сохранить и перейти дальше</button>
 </form>
