--- a/Client.Web/Scripts/app/component/tab-section/templates/photos.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/photos.html
@@ -29,4 +29,4 @@
 </form>
 
 
-<button class="button action action_next green large next">Сохранить и перейти дальше</button>
+<button class="button action action_next green large next"  ng-click="$parent.$parent.saveAndGoTo('docs', tabCollectionType)">Сохранить и перейти дальше</button>
