--- a/Client.Web/Scripts/app/component/config/router/add-ads.html
+++ b/Client.Web/Scripts/app/component/config/router/add-ads.html
@@ -26,4 +26,19 @@
             </tab>
         </tabset>
     </div>
+    <div>
+        <a class="flat-card add_flat">
+            <div class="preview-label">Предпросмотр</div>
+            <div class="card_image">
+                <img src="../../content/images/flat/1.jpeg" alt="">
+            </div>
+            <div class="card_description">
+                <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+                <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                    33 м<sup>2</sup>, 5 этаж
+                </div>
+                <div class="card-price">1 000 000 &#8381;</div>
+            </div>
+        </a>
+    </div>
 </div>
