--- a/Client.Web/Scripts/app/theme/style/pages/add.scss
+++ b/Client.Web/Scripts/app/theme/style/pages/add.scss
@@ -191,6 +191,15 @@ $tab-active-bg: #f8fafb;
       top: -40px;
       background: $tab-active-bg;
       min-height: 100%;
+      .download-info {
+        font-size: 13px;
+        font-weight: 500;
+        text-align: center;
+        color: #9fadb5;
+        padding: 0 10px;
+        margin-bottom: 20px;
+        margin-top: 10px;
+      }
     }
 
     .tab_close {
@@ -215,6 +224,7 @@ $tab-active-bg: #f8fafb;
     .title {
       font-weight: 200;
       font-size: 34px;
+      margin-bottom: 40px;
     }
   }
 }
@@ -339,3 +349,39 @@ button {
   }
 
 }
+
+.add_flat {
+  box-shadow: 0 5px 15px 0 #d1dbe1;
+  margin-left: 400px;
+  float: left;
+
+  &:hover {
+    cursor: default;
+
+    .card-title {
+      color: #181818;
+
+      &:hover {
+        color: #181818;
+      }
+    }
+  }
+
+  .preview-label {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    border-radius: 3px;
+    background-color: rgba(67, 88, 100, 0.3);
+    font-size: 11px;
+    font-weight: 900;
+    letter-spacing: 0.5px;
+    color: #ffffff;
+    text-transform: uppercase;
+    padding: 0 5px;
+    line-height: 22px;
+    vertical-align: middle;
+    height: 20px;
+  }
+}
+
