--- a/Client.Web/Scripts/app/component/config/router/my-ads-page.html
+++ b/Client.Web/Scripts/app/component/config/router/my-ads-page.html
@@ -1,3 +1,80 @@
-<div>
-    My-ads
+<div class="my-flats">
+    <a class="flat-card">
+        <div class="card_image">
+            <img src="../../content/images/flat/1.jpeg" alt="">
+        </div>
+        <div class="card_description">
+            <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+            <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                33 м<sup>2</sup>, 5 этаж
+            </div>
+            <div class="card-price">1 000 000 &#8381;</div>
+        </div>
+    </a>
+    <a class="flat-card">
+        <div class="card_image">
+            <img src="../../content/images/flat/1.jpeg" alt="">
+        </div>
+        <div class="card_description">
+            <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+            <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                33 м<sup>2</sup>, 5 этаж
+            </div>
+            <div class="card-price">1 000 000 &#8381;</div>
+        </div>
+    </a>
+    <a class="flat-card">
+        <div class="card_image">
+            <img src="../../content/images/flat/1.jpeg" alt="">
+        </div>
+        <div class="card_description">
+            <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+            <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                33 м<sup>2</sup>, 5 этаж
+            </div>
+            <div class="card-price">1 000 000 &#8381;</div>
+        </div>
+    </a>
+    <a class="flat-card">
+        <div class="card_image">
+            <img src="../../content/images/flat/1.jpeg" alt="">
+        </div>
+        <div class="card_description">
+            <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+            <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                33 м<sup>2</sup>, 5 этаж
+            </div>
+            <div class="card-price">1 000 000 &#8381;</div>
+        </div>
+    </a>
+    <a class="flat-card">
+        <div class="card_image">
+            <img src="../../content/images/flat/1.jpeg" alt="">
+        </div>
+        <div class="card_description">
+            <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+            <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                33 м<sup>2</sup>, 5 этаж
+            </div>
+            <div class="card-price">1 000 000 &#8381;</div>
+        </div>
+    </a>
+    <a class="flat-card">
+        <div class="card_image">
+            <img src="../../content/images/flat/1.jpeg" alt="">
+        </div>
+        <div class="card_description">
+            <div class="card-title"  ui-sref="apartment-detail/:id">Однокомнатная квартира</div>
+            <div class="card-info"><span class="metro-label" style="background-color: red"></span> станция Метро,
+                33 м<sup>2</sup>, 5 этаж
+            </div>
+            <div class="card-price">1 000 000 &#8381;</div>
+        </div>
+    </a>
+
+    <div class="add_flat_ctrl" ui-sref="add-ads">
+        <div class="title">Добавить объект</div>
+    </div>
+
+
 </div>
