--- a/Client.Web/Scripts/app/component/tab-section/templates/photos.html
+++ b/Client.Web/Scripts/app/component/tab-section/templates/photos.html
@@ -1,30 +1,29 @@
-<div class="form">
-    <div class="download">
-        <div class="icon-add"></div>
-        <div class="download-description">
-            <strong>Перетащите</strong> на это поле фотографии объекта, или <span class="add-control">выберите</span> их вручную
-        </div>
-    </div>
-    <div class="download-info">
-        Вы можете загрузить люьое количество файлов. Формат файлов: jpg и png размером до 5 мегабайт каждый.
-    </div>
-</div>
-
 <form name="photoForm">
     <div class="download-list file-list">
         <div class="download-list-file-wrapper" ng-repeat="file in uploadedFiles track by $index" ng-click="setCover($index)">
             <img ngf-src="file">
             <div class="label file-label-cover" ng-class="{active: file.isCover}">Обложка</div>
-            <div class="file-label-remove" ng-click="removeFile($index);"></div>
-        </div><div class="download-list-uploader"
+            <div title="Удалить" class="file-label-remove" ng-click="removeFile($index);"></div>
+        </div>
+
+        <div class="download-list-uploader"
+             ng-class="{added: isAdded}"
              ngf-accept="'image/png,image/jpeg'"
              ngf-drop="uploadFiles($files)"
              ngf-select="uploadFiles($files)"
-             ngf-validate="{size: {max: '5MB'}, pattern: '.jpg,.png', totalSize: {max: '50MB'}}"
+             ngf-validate="{size: {max: '5MB'}, pattern: '.jpeg,.jpg,.png', totalSize: {max: '50MB'}}"
              multiple="true">
-            <div class="download-list-uploader-text">Добавить</div>
+            <div class="download-list-uploader-text">
+                <div class="download-description">
+                    <strong>Перетащите</strong> на это поле фотографии объекта, или <span class="add-control">выберите</span> их вручную
+                </div>
+                <span class="add-text">Добавить</span>
+            </div>
         </div>
         <div></div>
+        <div class="download-info">
+            Вы можете загрузить любое количество файлов. Формат файлов: jpg и png размером до 5 мегабайт каждый.
+        </div>
     </div>
 </form>
 
