--- a/Client.Web/Scripts/app/component/config/router/my-ads-page.html
+++ b/Client.Web/Scripts/app/component/config/router/my-ads-page.html
@@ -1,5 +1,5 @@
 <div class="my-flats">
-    <a class="flat-card">
+    <a class="flat-card" ui-sref="apartment-detail({id: 1})">
         <div class="card_image">
             <img src="../../content/images/flat/1.jpeg" alt="">
         </div>
@@ -11,7 +11,7 @@
             <div class="card-price">1 000 000 &#8381;</div>
         </div>
     </a>
-    <a class="flat-card">
+    <a class="flat-card" ui-sref="apartment-detail({id: 1})">
         <div class="card_image">
             <img src="../../content/images/flat/1.jpeg" alt="">
         </div>
@@ -23,7 +23,7 @@
             <div class="card-price">1 000 000 &#8381;</div>
         </div>
     </a>
-    <a class="flat-card">
+    <a class="flat-card" ui-sref="apartment-detail({id: 1})">
         <div class="card_image">
             <img src="../../content/images/flat/1.jpeg" alt="">
         </div>
@@ -35,7 +35,7 @@
             <div class="card-price">1 000 000 &#8381;</div>
         </div>
     </a>
-    <a class="flat-card">
+    <a class="flat-card" ui-sref="apartment-detail({id: 1})">
         <div class="card_image">
             <img src="../../content/images/flat/1.jpeg" alt="">
         </div>
@@ -47,7 +47,7 @@
             <div class="card-price">1 000 000 &#8381;</div>
         </div>
     </a>
-    <a class="flat-card">
+    <a class="flat-card" ui-sref="apartment-detail({id: 1})">
         <div class="card_image">
             <img src="../../content/images/flat/1.jpeg" alt="">
         </div>
@@ -59,7 +59,7 @@
             <div class="card-price">1 000 000 &#8381;</div>
         </div>
     </a>
-    <a class="flat-card">
+    <a class="flat-card" ui-sref="apartment-detail({id: 1})">
         <div class="card_image">
             <img src="../../content/images/flat/1.jpeg" alt="">
         </div>
